# woer

acct-group/naive/: naive-0-r1.ebuild
acct-user/naive/: naive-0-r1.ebuild
app-admin/chezmoi/: Manifest  chezmoi-2.47.1.ebuild  chezmoi-2.47.2.ebuild  chezmoi-2.60.1.ebuild  chezmoi-2.62.7.ebuild
app-admin/rbw/: Manifest  rbw-1.10.0.ebuild  rbw-1.10.1.ebuild  rbw-1.10.2.ebuild  rbw-1.11.0.ebuild  rbw-1.11.1.ebuild  rbw-1.9.0-r1.ebuild  rbw-9999.ebuild
app-arch/ouch/: ouch-0.6.1-r1.ebuild
app-containers/lazydocker/: Manifest  lazydocker-0.23.1.ebuild  lazydocker-0.23.3.ebuild
app-crypt/pinentry-fuzzel/: Manifest  pinentry-fuzzel-0.1.0.ebuild
app-editors/heh/: Manifest  heh-0.5.0.ebuild  heh-0.6.0.ebuild  heh-0.6.2.ebuild
app-editors/hex-patch/: Manifest  hex-patch-1.11.1.ebuild  hex-patch-1.12.1.ebuild  hex-patch-1.12.2.ebuild  hex-patch-1.12.3.ebuild  hex-patch-1.12.4.ebuild  hex-patch-1.12.6.ebuild
app-emulation/wine-wayland/: wine-wayland-9999.ebuild
app-eselect/eselect-pwntools-gdb/: Manifest  eselect-pwntools-gdb-0.0.1.ebuild
app-i18n/fcitx/: Manifest
app-i18n/fcitx-chinese-addons/: Manifest  fcitx-chinese-addons-5.1.3.ebuild
app-i18n/fcitx-qt/: fcitx-qt-5.1.4.ebuild
app-i18n/libime/: libime-1.1.4.ebuild
app-laptop/zcfan/: zcfan-9999.ebuild
app-misc/aichat/: Manifest  aichat-0.25.0-r1.ebuild  aichat-0.25.0.ebuild  aichat-0.26.0.ebuild  aichat-0.27.0.ebuild  (+3 more)
gui-wm/hyprland-virtual-desktops/files/: hyprland-virtual-desktops-2.2.3-fix-convertion.patch  hyprland-virtual-desktops-2.2.3-use-hyprutils.patch  meson.build
profiles/: repo_name
(+237 files in other folders)
